Remove duplicated call to virInitialize

--- a/AUTHORS
+++ b/AUTHORS
@@ -49,6 +49,8 @@ Patches have also been contributed by:
   John Levon           <john.levon@sun.com>
   David Lively         <dlively@virtualiron.com>
   Charles Duffy        <Charles_Duffy@messageone.com>
+  Nguyen Anh Quynh     <aquynh@gmail.com>
+
 
   [....send patches to get your name here....]
 
