Improve virExec error reporting

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Aug 20 09:28:33 BST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/util.c: Re-arrange virExec() to improve error reporting
+
 Mon Aug 18 10:22:33 BST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/libvirt.c: Remove duplicate call to virInitialize() in
