--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wed Aug 20 15:11:57 CEST 2008 Daniel Veillard <veillard@redhat.com>
+
+	* configure.in libvirt.spec.in docs/Makefile.am: fix the problem
+	  of HTML generation in the absence of XHTML1 DTDs in the system
+	  catalog.
+
 Wed Aug 20 14:49:29 CEST 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/network_conf.c src/network_conf.h src/qemu_driver.c: allow to
