--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Thu Aug 21 21:29:28 CEST 2008 Jim Meyering <meyering@redhat.com>
+
+	autobuild.sh: Fix minor shell-quoting bugs.
+	* autobuild.sh: Remove unnecessary quotes.
+	Don't choke on a file name argument containing a space.
+	Don't misbehave for $AUTOBUILD_INSTALL_ROOT containing
+	a shell meta-character.
+
 Wed Aug 21 11:14:09 BST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/remote_internal.c: Clarify error messages from various
