--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Fri Aug 22 08:30:00 PDT 2008 Dan Smith <danms@us.ibm.com>
+	* src/lxc_driver.c: Make sure we cleanup veth devices at shutdown
+
 Fri Aug 22 11:49:42 BST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* python/libvir.py: Use libvirt error message as exception
