--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Sep  3 09:08:01 CEST 2008 Daniel Veillard <veillard@redhat.com>
+
+	* src/storage_conf.c: add one missing check in virStoragePoolDefParseDoc
+
 Tue Sep  2 17:30:50 CEST 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/domain_conf.c: fix a parsing error for input devices
