Update domain xml after usb device hotplug.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Sep  3 10:57:00 EST 2008 Cole Robinson <crobinso@redhat.com>
+
+	* src/domain_conf.c src/domain_conf.h src/qemu_driver.c:
+	  Update domain xml after usb device hotplug.
+
 Wed Sep  3 10:42:00 EST 2008 Cole Robinson <crobinso@redhat.com>
 
 	* src/qemu_driver.c: scrape media eject output to determine failure
@@ -8,6 +13,11 @@ Wed Sep  3 09:58:00 EST 2008 Cole Robinson <crobinso@redhat.com>
 	  xml. check for disk target duplicates as well.
 	* tests/xml2sexprdata/xml2sexpr-fv-v2.sexpr: fix for disk ordering
 	* tests/xml2sexprdata/xml2sexpr-fv-vncunused.sexpr: fix for disk ordering
+
+Wed Sep  3 14:51:03 CEST 2008 Daniel Veillard <veillard@redhat.com>
+
+	* src/qemu_driver.c: patch from Cole Robinson to avoid a segfault
+	  on KVM CD eject
 
 Wed Sep  3 14:37:06 CEST 2008 Daniel Veillard <veillard@redhat.com>
 
