* src/qemu_driver.c: switch flags to unsigned by James Morris * AUTHORS: add James Morris Daniel

--- a/AUTHORS
+++ b/AUTHORS
@@ -50,6 +50,7 @@ Patches have also been contributed by:
   David Lively         <dlively@virtualiron.com>
   Charles Duffy        <Charles_Duffy@messageone.com>
   Nguyen Anh Quynh     <aquynh@gmail.com>
+  James Morris         <jmorris@namei.org>
 
 
   [....send patches to get your name here....]
