--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Sep  4 15:18:00 CEST 2008 Daniel Veillard <veillard@redhat.com>
+
+	* src/qemu_driver.c: fix an error message, patch by Nguyen Anh Quynh
+
 Thu Sep  4 14:16:20 BST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* qemud/Makefile.am: Fix make check when augparse is not
