--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Sep  8 09:18:17 CEST 2008 Daniel Veillard <veillard@redhat.com>
+
+	* src/storage_backend_logical.c: finish applying initialization
+	  from Jim Fehlig patch for logical storage backend
+
 Fri Sep  5 15:59:26 BST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/openvz_conf.c, src/openvz_driver.c: Fix trailing
