--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Sep 17 15:03:00 BST 2008 Richard W.M. Jones <rjones@redhat.com>
+
+	* configure.in, src/qemu_driver.h, src/qemu_driver.c: KVM
+	  can determine max VCPUs at runtime (Guido Günther).
+
 Tue Sep 16 12:43:00 EST 2008 Cole Robinson <crobinso@redhat.com>
 
 	* src/storack_backend_disk.c: Implement disk volume delete
