--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Sep 18 09:52:00 BST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/qemu_driver.c, configure.in, libvirt.spec.in: Remove
+	trailing whitespace & fix diagnostic string translation.
+
 Wed Sep 17 17:02:00 BST 2008 Richard W.M. Jones <rjones@redhat.com>
 
 	* src/openvz_driver.c: Fix segfault in OpenVZ driver
