--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Thu Sep 18 09:55:00 BST 2008 Richard W.M. Jones <rjones@redhat.com>
+
+	Documentation cleanups.
+	* docs/bindings.html.in: Clean up the bindings page, and add
+	  C# and Java.
+	* docs/windows.html.in: Remove old bogus information and add
+	  placeholder.
+
 Thu Sep 18 09:52:00 BST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/qemu_driver.c, configure.in, libvirt.spec.in: Remove
