--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Sep 23 12:17:22 CEST 2008 Daniel Veillard <veillard@redhat.com>
+
+	* po/pt_BR.po: updated brazilian translation
+
 Mon Sep 22 22:18:16 CEST 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/storage_backend_logical.c: enable stop pool in logical backend
